feat: add endpoint to delete user device
